# qitoylib-rs

./: .gitignore  .gitmodules  Cargo.toml  all.html  compete.toml  crates.js  flake.nix  help.html  katex.html  macro.chmax.html  search-index.js  settings.html  source-files.js  src-files.js
.verify-helper/: timestamps.remote.json
ac_library_rs/: all.html  index.html  sidebar-items.js
amplify/: all.html  derive.AsAny.html  derive.Display.html  derive.Error.html  derive.From.html  derive.Getters.html  derive.Wrapper.html  index.html  macro.bmap!.html  macro.bmap.html  macro.bset!.html  macro.bset.html  macro.default.html  macro.dumb!.html  macro.dumb.html  macro.empty.html  macro.list.html  macro.map.html  macro.none!.html  macro.none.html  macro.s.html  macro.set.html  macro.zero.html  sidebar-items.js  struct.IoError.html  struct.Slice32.html  trait.AsAny.html  trait.Bipolar.html  trait.DumbDefault.html  trait.Wrapper.html
amplify_derive/: all.html  derive.AsAny.html  derive.Display.html  derive.Error.html  derive.From.html  derive.Getters.html  derive.Wrapper.html  index.html  sidebar-items.js
amplify_num/: all.html  index.html  sidebar-items.js  struct.i1024.html  struct.i256.html  struct.i512.html  struct.u1.html  struct.u1024.html  struct.u2.html  struct.u24.html  struct.u256.html  struct.u3.html  struct.u4.html  struct.u5.html  struct.u512.html  struct.u6.html  struct.u7.html
amplify_syn/: all.html  enum.ArgValue.html  enum.ArgValueReq.html  enum.Attr.html  enum.Error.html  enum.ListReq.html  enum.LiteralClass.html  enum.MetaArg.html  enum.TypeClass.html  enum.ValueClass.html  enum.ValueReq.html  index.html  macro.ident!.html  macro.ident.html  sidebar-items.js  struct.AttrReq.html  struct.MetaArgList.html  struct.MetaArgNameValue.html  struct.ParametrizedAttr.html  struct.SingularAttr.html
crates/algorithm/mo/: Cargo.toml
crates/algorithm/mo/examples/: mo_algorithm.rs
crates/algorithm/mo/src/: lib.rs
crates/algorithm/rerooting_dp/: Cargo.toml
crates/algorithm/rerooting_dp/examples/: rerooting_dp.rs
crates/algorithm/rerooting_dp/src/: lib.rs
crates/data_structure/li_chao_tree/: Cargo.toml
crates/data_structure/li_chao_tree/examples/: line_add_get_min.rs  segment_add_get_min.rs
crates/data_structure/li_chao_tree/src/: lib.rs
crates/data_structure/potentialized_unionfind/: Cargo.toml
crates/data_structure/potentialized_unionfind/examples/: unionfind_with_potential_non_commutative_group.rs
crates/data_structure/potentialized_unionfind/src/: lib.rs
crates/data_structure/red_black_tree/: Cargo.toml
crates/data_structure/red_black_tree/examples/: dynamic_sequence_range_affine_range_sum.rs  not_graph.rs
crates/data_structure/red_black_tree/src/: lib.rs
crates/data_structure/weighted_dsu/: Cargo.toml
crates/data_structure/weighted_dsu/examples/: weighted_dsu.rs
crates/data_structure/weighted_dsu/src/: lib.rs
crates/fps/bostan_mori/: Cargo.toml
crates/fps/bostan_mori/examples/: kth_term_of_linearly_recurrent_sequence.rs
crates/fps/bostan_mori/src/: lib.rs
crates/prime/check/: Cargo.toml
crates/prime/check/examples/: primality_test.rs
crates/prime/factorize/: Cargo.toml
crates/prime/factorize/examples/: factorize.rs
crates/prime/factorize/src/: lib.rs
crates/prime/pi/: Cargo.toml
crates/prime/pi/examples/: pi.rs
crates/prime/pi/src/: lib.rs
crates/qitoylib/: Cargo.toml
crates/qitoylib/examples/: main.rs
crates/qitoylib/src/: lib.rs
data_structure/: index.html
data_structure/red_black_tree/: Cargo.toml
data_structure/red_black_tree/examples/: red_black_tree.rs
data_structure/red_black_tree/src/: lib.rs
itertools/: enum.Either.html
katexit/: all.html  attr.katexit.html  index.html  sidebar-items.js
libc/: enum.FILE.html  enum.fpos64_t.html  enum.fpos_t.html  struct.Elf32_Chdr.html  struct.Elf32_Ehdr.html  struct.Elf32_Phdr.html  struct.Elf32_Shdr.html  struct.Elf32_Sym.html  struct.Elf64_Chdr.html  struct.Elf64_Ehdr.html  struct.Elf64_Phdr.html  struct.Elf64_Shdr.html  struct.Elf64_Sym.html  struct.__c_anonymous_ifru_map.html  struct.__c_anonymous_ptrace_syscall_info_entry.html  struct.__c_anonymous_ptrace_syscall_info_exit.html  struct.__c_anonymous_ptrace_syscall_info_seccomp.html  struct.__c_anonymous_sockaddr_can_j1939.html  struct.__c_anonymous_sockaddr_can_tp.html  struct.__exit_status.html  struct.__timeval.html  struct.af_alg_iv.html  struct.aiocb.html  struct.arpd_request.html  struct.can_filter.html  struct.cmsghdr.html  struct.cpu_set_t.html  struct.dirent.html  struct.dirent64.html  struct.dl_phdr_info.html  struct.dqblk.html  struct.fanotify_event_metadata.html  struct.fanotify_response.html  struct.ff_condition_effect.html  struct.ff_constant_effect.html  struct.ff_effect.html  struct.ff_envelope.html  struct.ff_periodic_effect.html  struct.ff_ramp_effect.html  struct.ff_replay.html  (+83 more)
math/: index.html
num/: all.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  (+10 more)
prime/factorise/: Cargo.toml
prime/factorise/src/: lib.rs
prime/pi/: Cargo.toml
prime/pi/src/: lib.rs
verify/: .gitignore  Cargo.toml  all.html  attr.verify.html  index.html  macro.verify.html  sidebar-items.js  trait.Verify.html  verify.json  verify.sh
verify/example/: index.html
verify/examples/: example.rs  factorize.rs  mo_algorithm.rs  red_black_tree.rs  rerooting_dp.rs
verify/factorize/: index.html
verify/mo_algorithm/: index.html
verify/primality_test/: index.html
verify/proc/: Cargo.toml
verify/proc/src/: lib.rs  verify_docs.rs
verify/red_black_tree/: index.html
verify/rerooting_dp/: index.html
verify/src/: example.rs  lib.rs  mo_algorithm.rs  prime.rs  red_black_tree.rs  rerooting_dp.rs  weighted_dsu.rs
verify/tests/: example.rs  mo_algorithm.rs  prime.rs  rerooting_dp.rs  weighted_union_find_trees.rs
verify/weighted_dsu/: index.html
(+1228 files in other folders)
