[workspace]
members = [
  "crates/algebra/*",
  "crates/algorithm/*",
  "crates/automaton/*",
  "crates/data_structure/*",
  "crates/graph/*",
  "crates/math/*",
  "crates/prime/*",
  "crates/proc/*",
  "crates/string/*",
  "crates/trait/*",
  "crates/utils/*",
]
resolver = "2"

[workspace.dependencies]
ac-library-rs = "=0.1.1"
itertools = "=0.11.0"
num = "=0.4.1"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
proconio = { version = "0.4.5", features = ["derive"] }

# proc macro
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.31", features = ["full"] }
