[workspace]
members = [
  "crates/algebra/*",
  "crates/algorithm/*",
  "crates/automaton/*",
  "crates/data_structure/*",
  "crates/fps/*",
  "crates/graph/*",
  "crates/math/*",
  "crates/prime/*",
  "crates/proc/*",
  "crates/qitoylib",
  "crates/string/*",
  "crates/trait/*",
  "crates/utils/*",
]
resolver = "2"
package.version = "0.1.0"
package.edition = "2024"

[workspace.dependencies]
ac-library-rs = "=0.2.0"
itertools = "=0.14.0"
num = "=0.4.3"
rand = "=0.9.2"
proconio = { version = "0.5.0", features = ["derive"] }

# proc macro
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.31", features = ["full"] }
