[package]
name = "verify"
version = "0.1.0"
edition = "2021"

[dependencies]
ac-library-rs = { workspace = true }
anyhow = "1.0.75"
proconio = "0.4.5"
qitoy-mo = { path = "../algorithm/mo" }
qitoy-prelude = { path = "../prelude" }
qitoy-rerooting_dp = { path = "../algorithm/rerooting_dp" }
qitoy-group = { path = "../algebra/group" }
qitoy-weighted_dsu = { path = "../data_structure/weighted_dsu" }
qitoy-prime-check = { path = "../prime/check" }
qitoy-prime-factorize = { path = "../prime/factorize" }
rstest = "0.18.2"
verify_proc = { path = "./proc" }
itertools = { workspace = true }
