[package]
name = "qitoy-mo"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-compete.example]
mo_algorithm.problem = "https://judge.yosupo.jp/problem/static_range_inversions_query"

[[example]]
name = "mo_algorithm"
path = "examples/mo_algorithm.rs"

[dev-dependencies]
ac-library-rs.workspace = true
proconio.workspace = true
itertools.workspace = true
