[package]
name = "qitoy-potentialized_unionfind"
version = "0.1.0"
edition = "2021"

[dependencies]
qitoy-group = { path = '../../algebra/group' }

[[example]]
name = "unionfind_with_potential_non_commutative_group"
path = "examples/unionfind_with_potential_non_commutative_group.rs"

[dev-dependencies]
ac-library-rs.workspace = true
proconio.workspace = true
qitoy-derive = { path = "../../proc/derive" }
