[package]
name = "qitoy-potentialized_unionfind"
version.workspace = true
edition.workspace = true

[dependencies]
qitoy-group = { path = '../../algebra/group' }

[[example]]
name = "unionfind_with_potential_non_commutative_group"
path = "examples/unionfind_with_potential_non_commutative_group.rs"

[dev-dependencies]
ac-library-rs.workspace = true
proconio.workspace = true
qitoy-derive = { path = "../../proc/derive" }
