[package]
name = "qitoy-red_black_tree"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.example]
dynamic_sequence_range_affine_range_sum.problem = "https://judge.yosupo.jp/problem/dynamic_sequence_range_affine_range_sum"

[[example]]
name = "dynamic_sequence_range_affine_range_sum"
path = "examples/dynamic_sequence_range_affine_range_sum.rs"

[dependencies]

[dev-dependencies]
proconio.workspace = true
qitoy-derive = { path = "../../proc/derive" }
