[package]
name = "qitoy-bostan_mori"
version.workspace = true
edition.workspace = true

[[example]]
name = "kth_term_of_linearly_recurrent_sequence"
path = "examples/kth_term_of_linearly_recurrent_sequence.rs"

[dependencies]
ac-library-rs.workspace = true

[dev-dependencies]
proconio.workspace = true
