[package]
name = "qitoy-prime-factorize"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.example]
factorize.problem = "https://judge.yosupo.jp/problem/factorize"

[[example]]
name = "factorize"
path = "examples/factorize.rs"

[dependencies]
qitoy-prime-check = { path = "../check" }
qitoy-math-montgomery = { path = "../../math/montgomery" }
rand.workspace = true

[dev-dependencies]
itertools.workspace = true
proconio.workspace = true
