[package]
name = "qitoy-prime-pi"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-compete.example]
pi.problem = "https://judge.yosupo.jp/problem/counting_primes"

[[example]]
name = "pi"
path = "examples/pi.rs"

[dependencies]
ac-library-rs.workspace = true

[dev-dependencies]
proconio.workspace = true
